PR# kern/45664: audio panic at detach

Pass the size of the structure to kmem_free, not the size of the DMA
buffer.